# stern_odor_rig

./: .gitignore  README.md
control/: README.md
control/matlab/: .dropbox  Control_Code.m  Create_File.m  Odor_Presentation.m  Odorants.m  Port_Assign.m  Read_Im.m  Run_Assay.m  State_Assign.m  Trial.m  Trial.txt  Write_Odor_File.m
python/: track_flies.py
tracking/: CMakeLists.txt  INSTALL_XUBUNTU.md  README.md  save_camera_images.cpp  tracking.cpp
tracking/CMakeModules/: FindFlyCapture2.cmake
