cmake_minimum_required(VERSION 2.8)
project( tracking )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")

find_package( OpenCV REQUIRED )
if(${OpenCV_FOUND})
  message(STATUS "OpenCV found")
  set(tracking_ext_link_LIBS ${OpenCV_LIBS})
else()
  message(STATUS "OpenCV not found")
endif()

find_package( FlyCapture2 REQUIRED )
if(${FlyCapture2_FOUND})
  message(STATUS "FlyCapture2 found")
  set(tracking_ext_link_LIBS ${tracking_ext_link_LIBS} ${FlyCapture2_LIBRARIES})
  include_directories(${FlyCapture2_INCLUDE_DIRS})
else()
  message(STATUS "FlyCapture2 not found")
endif()

find_package( Boost REQUIRED COMPONENTS date_time filesystem system )
if(${Boost_FOUND})
  include_directories(${Boost_INCLUDE_DIRS})
  set(tracking_ext_link_LIBS ${tracking_ext_link_LIBS} ${Boost_LIBRARIES})
  message(STATUS "Boost found")
else()
  message(STATUS "Boost not found")
endif()

add_executable( tracking tracking.cpp )
target_link_libraries( tracking ${tracking_ext_link_LIBS} )