cmake_minimum_required(VERSION 2.8)
project( tracking )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")

find_package( OpenCV REQUIRED )
if(${OpenCV_FOUND})
  set(tracking_ext_link_LIBS ${OpenCV_LIBS})
  message(STATUS "OpenCV found")
else()
  message(STATUS "OpenCV not found")
endif()

find_package( FlyCapture2 REQUIRED )
if(${FLYCAPTURE2_FOUND})
  set(tracking_ext_link_LIBS ${tracking_ext_link_LIBS} ${FlyCapture2_LIBRARIES})
  include_directories(${FlyCapture2_INCLUDE_DIRS})
  message(STATUS "FlyCapture2 found")
else()
  message(STATUS "FlyCapture2 not found")
endif()

find_package( Boost REQUIRED COMPONENTS date_time filesystem system )
if(${Boost_FOUND})
  set(tracking_ext_link_LIBS ${tracking_ext_link_LIBS} ${Boost_LIBRARIES})
  include_directories(${Boost_INCLUDE_DIRS})
  message(STATUS "Boost found")
else()
  message(STATUS "Boost not found")
endif()

add_executable( save-camera-images save_camera_images.cpp )
target_link_libraries( save-camera-images ${tracking_ext_link_LIBS} )